[gd_scene load_steps=2 format=3 uid="uid://ci78tpn52jqrb"]

[ext_resource type="Script" path="res://scenes/ui/settings_control.gd" id="1_0dkjx"]

[node name="SettingsControl" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0dkjx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.196078)

[node name="SoundFX" type="Control" parent="."]
anchors_preset = 0
offset_top = -35.0
offset_right = 40.0
offset_bottom = 5.0

[node name="Slider" type="HSlider" parent="SoundFX"]
layout_mode = 0
offset_right = 235.0
offset_bottom = 16.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="SoundFX"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -25.0
offset_right = -97.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 2
text = "Sound effects"

[node name="Music" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 35.0
offset_right = 40.0
offset_bottom = 75.0

[node name="Slider" type="HSlider" parent="Music"]
layout_mode = 0
offset_right = 235.0
offset_bottom = 16.0
max_value = 1.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="Music"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -25.0
offset_right = -97.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 2
text = "Music"

[connection signal="value_changed" from="SoundFX/Slider" to="." method="_on_sound_fx_slider_value_changed"]
[connection signal="value_changed" from="Music/Slider" to="." method="_on_music_slider_value_changed"]
